--- a/css/style-v1.css
+++ b/css/style-v1.css
@@ -4043,7 +4043,8 @@
       margin-top: -77.0781px;
     }
     #mainhero-2 {
-      margin-top: -65px;
+      margin-top: -85px;
+      padding-top: 80px;
     }
   }
   .fadeInDown,
